# hands-on-python

./: README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
hands_on_python/src/: index.html  main.py
hands_on_python/src/static/: main.js  style.css
server/: index.html  main.py
server/static/: style.css
